src/objects/LeanData__Tagging_Log__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Error_Details__c</fullName>
        <label>Error Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Filter_Rules__c</fullName>
        <label>Filter Rules</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Outcome__c</fullName>
        <label>Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Serialized_Matched_Account__c</fullName>
        <label>Account Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Serialized_Primary_Lead__c</fullName>
        <label>Lead Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Tagging_Date__c</fullName>
        <label>Tagging Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeanData__Tagging_Trigger__c</fullName>
        <label>Tagging Trigger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Tiebreaker_Rules__c</fullName>
        <label>Tiebreaker Rules</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Tagging Log</label>
    <nameField>
        <label>Tagging Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tagging Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>